--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="https://www.linkedin.com/in/sheldon-mendonca"><img src="src/images/linkedin.svg" alt="my linked-in link" class="feedback-linkedin fb-images"></a>
             <a href="https://www.facebook.com/sheldon.mendonca.9/"><img src="src/images/facebook.svg" alt="my facebook link" class="feedback-fb fb-images"></a>
             <a href="https://www.instagram.com/sheldon_mendonca/"><img src="src/images/instagram.svg" alt="my insta link" class="feedback-insta fb-images"></a>
-            <a href="https://github.com/sheldomaniac"><img src="src/images/home.svg" alt="my home page" class="portfolio-page fb-images"></a>
+            <a href="https://sheldomaniac-portfolio.netlify.app/index.html"><img src="src/images/home.svg" alt="my home page" class="portfolio-page fb-images"></a>
         </div>			
         </nav>
         <p class="footer-text">&#169; Copyright by Sheldon Mendonca.</p>
